- 
    
Bug
 - 
    Resolution: Done
 - 
    
P1: Critical
 - 
    Qt Creator 4.14.0-beta1
 
- 
        6c5eaed92ca838e68745c71ee27adb754a496b8e (qt-creator/qt-creator/4.14)
 
Searching for a term and using a different file pattern than the default '*' does not find anything..
| For Gerrit Dashboard: QTCREATORBUG-24792 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 317807,3 | Utils: Fix matching wildcards to full paths | 4.14 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |